Fix button spacing

--- a/app/assets/stylesheets/bootstrap-custom.css.scss
+++ b/app/assets/stylesheets/bootstrap-custom.css.scss
@@ -53,7 +53,7 @@ body {
   	background-color: transparent;
   	padding: 0;
   	margin: 0;
-/*    margin-left: 2px;*/
+    margin-left: 2px;
     margin-top: 2px;
   	max-width: 90px;
     vertical-align: bottom;
